<?xml version="1.0"?>
<package format="2">
  <name>amr_bringup</name>
  <version>0.0.0</version>
  <description>The amr_bringup package</description>
  <maintainer email="enaciodabasi@outlook.com">naci</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <exec_depend>roslaunch</exec_depend>

  <build_depend>class_loader</build_depend>
  <exec_depend>class_loader</exec_depend>

  <build_depend>diff_drive_controller</build_depend>
  <exec_depend>diff_drive_controller</exec_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>controller_manager</build_depend>
  <exec_depend>controller_manager</exec_depend>
  <export>

  </export>
</package>
