<?xml version="1.0"?>
<package format="2">
  <name>amr_description</name>
  <version>0.0.0</version>
  <description>The amr_description package</description>

  <maintainer email="naci@todo.todo">naci</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <architecture_independent></architecture_independent>
  </export>
</package>
