<?xml version="1.0"?>
<package format="2">
  <name>amr_mapping</name>
  <version>0.0.0</version>
  <description>The amr_mapping package</description>
  <maintainer email="enaciodabasi@outlook.com">naci</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>openslam_gmapping</build_depend>
  <build_depend>urg_node</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>openslam_gmapping</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>

  </export>
</package>
