<?xml version="1.0"?>
<package format="2">
  <name>amr_sim</name>
  <version>0.0.0</version>
  <description>The amr_sim package</description>

  <maintainer email="naci@todo.todo">naci</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>openslam_gmapping</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>behaviortree_cpp_v3</build_depend>
  <build_depend>amr_custom_interfaces</build_depend>

  <exec_depend>amr_custom_interfaces</exec_depend>
  <exec_depend>behaviortree_cpp_v3</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
